Fix inspect code