@@ -7,6 +7,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import io.github.testimpact.store.CoverageMap;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import org.junit.jupiter.api.Test;
 
@@ -29,7 +30,7 @@ class ImpactResolverTest {
   @Test
   void zeroIntersectionForcesFullRunByDefault() {
     CoverageMap m = new CoverageMap();
-    m.replace("T1", new HashSet<>(java.util.Arrays.asList("a/A")));
+    m.replace("T1", new HashSet<>(List.of("a/A")));
     Selection s = new ImpactResolver(50, false).resolve(m, Collections.singleton("z/Z"), 0);
     assertEquals(Selection.Mode.FULL_RUN, s.mode());
   }
@@ -37,7 +38,7 @@ class ImpactResolverTest {
   @Test
   void zeroIntersectionThrowsWhenStrict() {
     CoverageMap m = new CoverageMap();
-    m.replace("T1", new HashSet<>(java.util.Arrays.asList("a/A")));
+    m.replace("T1", new HashSet<>(List.of("a/A")));
     assertThrows(
         IllegalStateException.class,
         () -> new ImpactResolver(50, true).resolve(m, Collections.singleton("z/Z"), 0));
@@ -47,9 +48,9 @@ class ImpactResolverTest {
   void selectsTestsTouchingChangedClasses() {
     CoverageMap m = new CoverageMap();
     m.replace("com.acme.T1#a", new HashSet<>(java.util.Arrays.asList("a/A", "a/B")));
-    m.replace("com.acme.T2#b", new HashSet<>(java.util.Arrays.asList("a/C")));
+    m.replace("com.acme.T2#b", new HashSet<>(List.of("a/C")));
 
-    Set<String> changed = new HashSet<>(java.util.Arrays.asList("a/A"));
+    Set<String> changed = new HashSet<>(List.of("a/A"));
     Selection s = new ImpactResolver(50, false).resolve(m, changed, 0);
     assertEquals(Selection.Mode.SELECTED, s.mode());
     assertEquals(Collections.singleton("com.acme.T1#a"), s.selectedTestIds());
@@ -59,7 +60,7 @@ class ImpactResolverTest {
   @Test
   void exceedingFullRunIntervalForcesFullRun() {
     CoverageMap m = new CoverageMap();
-    m.replace("T1", new HashSet<>(java.util.Arrays.asList("a/A")));
+    m.replace("T1", new HashSet<>(List.of("a/A")));
     Selection s = new ImpactResolver(5, false).resolve(m, Collections.singleton("a/A"), 5);
     assertEquals(Selection.Mode.FULL_RUN, s.mode());
     assertTrue(s.reason().contains("fullRunInterval"));
